; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_fs.c_access_check.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_fs.c_access_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }
%struct.statbuf = type { i64, i64, i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@_EACCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @access_check(%struct.statbuf* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.statbuf*, align 8
  %5 = alloca i32, align 4
  store %struct.statbuf* %0, %struct.statbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = call i64 (...) @superuser()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %46

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %46

13:                                               ; preds = %9
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.statbuf*, %struct.statbuf** %4, align 8
  %18 = getelementptr inbounds %struct.statbuf, %struct.statbuf* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %16, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %13
  %22 = load i32, i32* %5, align 4
  %23 = shl i32 %22, 6
  store i32 %23, i32* %5, align 4
  br label %36

24:                                               ; preds = %13
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.statbuf*, %struct.statbuf** %4, align 8
  %29 = getelementptr inbounds %struct.statbuf, %struct.statbuf* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = icmp eq i64 %27, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %24
  %33 = load i32, i32* %5, align 4
  %34 = shl i32 %33, 3
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %32, %24
  br label %36

36:                                               ; preds = %35, %21
  %37 = load %struct.statbuf*, %struct.statbuf** %4, align 8
  %38 = getelementptr inbounds %struct.statbuf, %struct.statbuf* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 8
  %40 = load i32, i32* %5, align 4
  %41 = and i32 %39, %40
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %45, label %43

43:                                               ; preds = %36
  %44 = load i32, i32* @_EACCES, align 4
  store i32 %44, i32* %3, align 4
  br label %46

45:                                               ; preds = %36
  store i32 0, i32* %3, align 4
  br label %46

46:                                               ; preds = %45, %43, %12, %8
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i64 @superuser(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
